Closed Bug 1044118 Opened 10 years ago Closed 10 years ago

Parse error message for "unclosed children in ruby" and "start tag seen without ruby" is swapped

Categories

(Core :: DOM: HTML Parser, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla34

People

(Reporter: wchen, Assigned: wchen)

Details

Attachments

(1 file)

      No description provided.
Attachment #8462706 - Flags: review?(hsivonen)
Attachment #8462706 - Flags: review?(hsivonen) → review+
https://hg.mozilla.org/mozilla-central/rev/41ccb50c6f96
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla34
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: