Bug 1044118 - Fix inverted check for unclosed children in ruby tag. r=hsivonen